# flugbuech

./: .dockerignore  .editorconfig  .env  .eslintrc.yml  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  Pipfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml  entrypoint.sh  nginx.conf  package-lock.json  package.json  requirements.txt  rustfmt.toml  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json  rustup-init.sh
.github/: dependabot.yml
.github/workflows/: backend.yml  build_docker.yml  ci.yml  frontend.yml  publish.yml
api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py  wsgi.py
data/: admin.py  models.py
data/migrations/: 0001_initial.py  0002_auto_20180719_2135.py  0003_auto_20180719_2146.py  0004_auto_20180719_2155.py  0005_auto_20180828_2157.py  0006_xcontest_fields.py  0007_flight_xcontest_url.py
frontend/: .env  .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.yml  eslint.config.ts  i18next-parser.config.js  i18next.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html  index.test.ts
frontend/static/: example.csv
frontend/tests/: test.ts
migrations/2019-04-20-230551_create_users/: up.sql
migrations/2019-04-20-233054_create_aircraft/: down.sql  up.sql
migrations/2019-04-21-100528_user_password/: down.sql  up.sql
migrations/2019-04-22-201405_create_flights/: down.sql  up.sql
migrations/2019-09-11-202231_location-add-owner/: down.sql  up.sql
migrations/2019-09-13-190904_user-add-last-aircraft/: down.sql  up.sql
migrations/2019-09-22-223132_enable-postgis/: down.sql
migrations/2019-09-22-223450_location-add-coordinates/: down.sql  up.sql
migrations/2019-09-24-220638_flights-add-igc/: down.sql  up.sql
migrations/2019-09-28-143638_user-auth-remove-trigger/: down.sql  up.sql
migrations/2019-12-13-113005_user-add-email/: up.sql
migrations/2019-12-13-131639_flight-add-create-date/: down.sql  up.sql
migrations/2019-12-15-165349_rename-aircraft-to-glider/: down.sql  up.sql
src/: auth.rs  base64.rs  cors.rs  data.rs  filters.rs  flash.rs  flights.rs  gliders.rs  import_csv.rs  locations.rs  main.rs  models.rs  optionresult.rs  process_igc.rs  profile.rs  schema.patch  schema.rs  stats.rs  submit.rs  templates.rs  test_utils.rs  xcontest.rs
stats/: urls.py  views.py
templates/: base.html.tera  base.tera  delete.tera  flash.tera  flight.html.tera  flight.tera  flight_delete.html.tera  flight_submit.html.tera  flight_submit.tera  flights.html.tera  flights.tera  glider.tera  gliders.html.tera  gliders.tera  index.html.tera  index.tera  location.html.tera  location.tera  location_delete.tera  location_edit.tera  locations.tera  login.tera  macros.tera  password-change.tera  privacy_policy.html.tera  profile.html.tera  profile.tera  registration.tera  stats.tera  submit.tera
testdata/: skytraxx.igc
(+132 files in other folders)
