[package]
name = "flugbuech"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel-geography = { version = "0.2", features = ["serde"], git = "https://github.com/dbrgn/diesel-geography", branch = "geography-queryid" }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
flat_projection = "0.4"
igc = "0.2"
log = "0.4"
num-traits = "0.2"
rocket = { version = "0.4", default-features = false, features = ["private-cookies"] }
serde = { version = "1", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json", "serve", "tera_templates"]

[dev-dependencies]
lazy_static = "1"
