[package]
name = "flugbuech"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel-geography = { version = "0.2", features = ["serde"], git = "https://github.com/Boscop/diesel-geography", branch = "master" }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
flat_projection = "0.4"
igc = "0.2"
log = "0.4"
num-traits = "0.2"
regex = "1.5.5"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"], default-features = false }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"], default-features = false }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"], default-features = false }
serde = { version = "1", features = ["derive"] }
time = "0.2"

[dev-dependencies]
lazy_static = "1"
rstest = "0.12"
