[package]
name = "flugbuech-api"
version = "0.2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = "4"
csv = "1.3.0"
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
diesel-geography = { version = "0.2", features = ["serde"], git = "https://github.com/66np/diesel-geography", rev = "059c553" }
diesel_migrations = { version = "2", features = ["postgres"] }
dotenv = "0.15"
flat_projection = "0.4"
igc = "0.2"
log = "0.4"
num-traits = "0.2"
regex = "1.5.5"
rocket = { version = "0.5.0", features = ["secrets", "json"], default-features = false }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"], default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
lazy_static = "1"
rstest = "0.18"
